b43-asm (0~20130228.1231-8) UNRELEASED; urgency=medium

  * NOT RELEASED YET
  * switch to python3.
  * explicitly add libfl-dev to build dependencies.
  * bump standards version to 4.5.0:
    - switch to https where possible.
  * switch to compat level 13.
  * allow R³=no.
  * fix lintian complaints:
    - I: b43-asm: hardening-no-bindnow usr/bin/b43-asm.bin

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 05 Jan 2016 03:06:56 +0100

b43-asm (0~20130228.1231-7) unstable; urgency=medium

  * rebuild against current sid.
  * update copyright information.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 05 Jan 2016 03:06:03 +0100

b43-asm (0~20130228.1231-6) unstable; urgency=medium

  * rebuild with gcc-5.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 31 Jul 2015 23:44:51 +0200

b43-asm (0~20130228.1231-5) unstable; urgency=medium

  * bump standards version to 3.9.6, no changes necessary.
  * update license shortname from GPL-2 to GPL-2.0, as recommended by the
    latest versions of DEP-5.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 03 Jan 2015 18:27:58 +0100

b43-asm (0~20130228.1231-4) unstable; urgency=medium

  * fix lintian override syntax (malformed-override Override of debian-watch-
    -file-is-missing).
  * rebuild with gcc-4.9.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 12 Jun 2014 02:49:26 +0200

b43-asm (0~20130228.1231-3) unstable; urgency=low

  * bump standards version to 3.9.5, no changes necessary.
  * debian/control: switch Vcs tags to github.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 13 Apr 2014 20:42:58 +0200

b43-asm (0~20130228.1231-2) unstable; urgency=low

  * rebuild with gcc-4.8.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 13 Jun 2013 19:11:01 +0200

b43-asm (0~20130228.1231-1) unstable; urgency=low

  * New upstream snapshot:
    - fix FTBS against bison 2.7.
  * switch to xz compressed tarballs and binaries.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 28 Feb 2013 20:25:46 +0100
